src/objects/Industry_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Overview_Page__c</fullName>
        <label>Overview Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <label>Presentation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Whitepaper__c</fullName>
        <label>Whitepaper</label>
        <type>TextArea</type>
    </fields>
    <label>Industry Solution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>